# pr-governance-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.cursor/plans/: pr_governance_agent_design_812ae7c4.plan.md
.cursor/rules/: 00-capture-idea.mdc  01-idea-interrogation.mdc  03-pmf-analysis.mdc  05-tech-stack.mdc  capstone-poc-planner.mdc
.cursor/skills/capstone-poc-planner/: SKILL.md
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: streamlit_app.py
data/sample_corpus/: bigquery_migration_requirements.md  dialect_conversion_guide.md  security_pii_policy.md
docs/: no-voice-demo-script.md  pr-governance-agent-architecture.md  pr-governance-agent-technical-design.md  pr-governance-agent-usage-guide.md  pr-governance-problem-data-and-evaluation.md  streamlit-ui-usage-guide.md
docs/samples/: failed_select_star_pr_fixture.json  success_pr_fixture.json
eval/: cases.yaml  cases_llm.yaml  run_eval.py
eval/fixtures/: pr_dialect_violation.json  pr_empty_patches.json  pr_invalid_bq_syntax.json  pr_pii_violation.json  pr_secret_leak.json  pr_select_star.json  sample_pr.json
scripts/: check_connectivity.py  github_mcp_bridge.py  ingest_docs.py  run_graph_cli.py  seed_sample_db.py  setup.sh  sync_cursor_rules.py
src/pr_governance_agent/: __init__.py  config.py  state.py  usage.py
src/pr_governance_agent/graph/: __init__.py  builder.py  llm.py  nodes.py
tests/: conftest.py  test_bigquery_validator.py  test_chunking.py  test_langsmith_config.py  test_llm.py  test_reranker.py  test_smoke.py  test_usage.py
(+20 files in other folders)
